@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.12...]
+### 2018-01-28
+	Fixed: Background mode was not applying even foreground affinity if no background affinity was defined.
 ### 2018-01-27
 	Removed: Adjust latency. It served no purpose than noise.
 	Changed: Status bar no longer shows as much useless information.
